# Bharat-OS

./: .agent.md  .clang-tidy  .clinerules  .cursorrules  .gitignore  AGENTS.md  BUILD.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  arch  assets  build.ps1  build.sh  build_config.json  build_config.yml  build_errors.txt  build_log.txt  cmake  configs  drivers  fix.patch  fix_core.py  fix_test_mocks_safe2.py  get_plan_prompt.txt  hal  idl  include  kernel_objdump.txt  list_rights.py  log_arm.txt  modify_build_config.py  modify_cmake.py  out.txt  output.txt  output2.txt  patch_cap.sh  (+52 more)
core/arch/: CMakeLists.txt  arch_crypto.h
core/kernel/: CMakeLists.txt  linker.ld  linker_arm32.ld  linker_arm64.ld  linker_riscv64.ld  staging
core/lib/: CMakeLists.txt  README.md  version_api.c
core/personalities/: CMakeLists.txt
drivers/: CMakeLists.txt
drivers/accel/: CMakeLists.txt  fpga_mgr.c
drivers/bus/: CMakeLists.txt
drivers/can_core/: can_controller_core.c
drivers/class/: CMakeLists.txt
drivers/core/: driver_registry.c  driver_registry.h  event.c  match.c  match.h  power.h
drivers/devices/: CMakeLists.txt
drivers/display/: CMakeLists.txt  virtio_gpu.c
drivers/fpga_mgr/: fpga_mgr.c
drivers/generic/: board_fabric.c  generic_registry.c
drivers/generic_docs/: README.md
drivers/input/: CMakeLists.txt  gpio_keys.c  gpio_keys.h
drivers/led/: CMakeLists.txt  led_core.h
drivers/motor_core/: motor_control_core.c
drivers/net/: CMakeLists.txt  ptp_clock.c  virtio_net.c
drivers/registry/: CMakeLists.txt
drivers/serial/: CMakeLists.txt  serial_console_match.c
drivers/virt_can/: virt_can.c
hal/arm64/: CMakeLists.txt  cpu_relax.c  discovery.c  hal_cpu.c  hal_mm.c  hal_pt_arm64.c  smmu.c
hal/common/: CMakeLists.txt  cpu_features.c  discovery.c  fdt_parser.c  hal_pt_mpu.c  iommu_adapter.c
hal/riscv64/: CMakeLists.txt  dma.c  hal_pt_riscv64.c
hal/x86_64/: CMakeLists.txt  apic.c  arch_vm.c  discovery.c  dma.c  hal_cpu.c  hal_mm.c  hal_pt_x86_64.c  trap_entry.S  vtd_iommu.c
kernel/: CMakeLists.txt  CMakeLists.txt.orig  CMakeLists.txt.patch  CMakeLists.txt.patch2  CMakeLists.txt.patch3  include  linker.ld  linker_arm32.ld  linker_arm64.ld  linker_riscv32.ld  linker_riscv64.ld  src  staging
kernel/console/: fb_console.c
kernel/display/: fb_core.c
kernel/include/: atomic.h  bharat_config.h.in  cap_policy.h  capability.h  cluster_bus.h  device.h  dsm.h  hw_security.h  io_subsys.h  ipc_async.h  ipc_endpoint.h  kernel.h  kernel_policy.h  kernel_safety.h  list.h  mm.h  mm_coloring.h  mm_zswap.h  multicore.h  numa.h  panic.h  personality_ops.h  power_thermal_perf.h  profile.h  rdma.h  rtos_defense.h  sandbox.h  sched.h  sched_deg.h  secure_boot.h  slab.h  spinlock.h  subsystem_profile.h  trap.h  virtio.h
kernel/input/: input_core.c
kernel/src/: ai_kernel_bridge.c  ai_sched.c  algo_matrix.c  atomic64_fallback.c  benchmark  boot  cap  capability.c  console  core  cpu_local.c  crypto  debug  demo  device  display  fault_diag.c  fs  init  ipc  kernel_boot.c  kernel_boot.h  kernel_policy.c  lib  main.c  mm  monitor  multicore.c  panic.c  power  power_thermal_perf.c  profile  sched  sched.c  sched.c.orig  sched_deg.c  sched_stub.c  security  stack_protector.c  subsystem  (+5 more)
lib/: CMakeLists.txt
lib/cap/: CMakeLists.txt  README.md
lib/capwire/: cap_codec.c  cap_proxy.c
lib/elf/: CMakeLists.txt  elf_parser.c
lib/fs/: fs_client.c  fs_client.h
lib/include/: game_engine_gfx.h  gui.h  ipc_user.h
lib/ipc/: CMakeLists.txt  README.md
lib/linux_compat/: README.md
lib/msg/: crc.c  crc.h  crc_generic.c  decode.c  encode.c  wire.c
lib/net/: CMakeLists.txt  README.md
lib/ool/: ool_validate.c
lib/packet/: CMakeLists.txt  README.md
lib/posix/: README.md  stub.c
lib/rbtree/: CMakeLists.txt  rbtree.c
lib/runtime/: CMakeLists.txt  README.md
lib/string/: string.c
lib/syscall/: CMakeLists.txt  syscall_stubs.c
lib/transport/: loopback.c
lib/urpc/: urpc.c
personalities/: CMakeLists.txt
personalities/android/: CMakeLists.txt  README.md  android_binder_dist.c  android_personality.c  android_process.c  android_security.c
personalities/automotive/: CMakeLists.txt
personalities/common/: CMakeLists.txt
personalities/linux/: CMakeLists.txt  linux_compat.h
personalities/native/: personality_native.c
personalities/windows/: CMakeLists.txt  win_compat.c  win_compat.h
sdk/: CMakeLists.txt  build.sh
services/: CMakeLists.txt
services/accelmgr/: CMakeLists.txt  README.md  main.c
services/actuator_mgr/: main.c
services/boot_displayd/: CMakeLists.txt  main.c
services/can/: CMakeLists.txt  can_service.h  main.c
services/common/: thermal_policy.c
services/console/: CMakeLists.txt  main.c
services/coremgr/: CMakeLists.txt  main.c
services/crypto/: CMakeLists.txt  crypto_service.h  dispatch.c  drbg.c  key_store.c  main.c  protocol.c
services/device/: CMakeLists.txt
services/devmgr/: CMakeLists.txt  README.md  main.c
services/diag/: CMakeLists.txt  main.c
services/drivers/: CMakeLists.txt  main.c
subsys/: CMakeLists.txt
tests/: CMakeLists.txt  benchmark_stubs.c  e2e  test_ai_governor.c  test_ai_kernel_bridge.c  test_automotive_subsys.c  test_bench_ipc.c  test_bench_sched.c  test_bench_sched_timer_tick.c  test_bench_zswap.c  test_benchmark_hw_caps.c  test_boot_e2e.c  test_boot_policy.c  test_builtin_drivers_profile.c  test_capability_ipc.c  test_capability_misuse.c  test_capability_policy.c  test_capwire.c  test_device_framework.c  test_dma_iommu.c  test_dma_lifecycle_host.c  test_elf_parser.c  test_hal_caps_consistency.c  test_hal_interrupts.c  test_hal_pt_fallbacks.c  test_integration_core_subsys.c  test_ipc_async_timeout.c  test_ipc_fuzz.c  test_ipc_multiple_waiters_fifo.c  test_ipc_no_spurious_self_wakeup.c  test_ipc_sync_receiver_wakeup.c  test_ipc_sync_sender_wakeup.c  test_lib_ipc_contract.c  test_memory_edgecases.c  test_memory_edgecases.c.orig  test_multikernel_topology.c  test_namesvc_registry.c  test_netstack_phase2  test_netstack_phase2.c  test_object_store.c  (+37 more)
(+2996 files in other folders)
